package com.company;

public enum Color {
    RED,
    BLUE,
    YELLOW,
    GREEN

}
